--- a/index.html
+++ b/index.html
@@ -10,34 +10,15 @@
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-	<div class="background"></div>
-	<div class="wrapper">
-		<section class="first-slide">
-			<div class="greeting_block">
-				<img src="img/logo.png" class="logo animated">
-				<div class="greeting_text greeting_text_next">
-					<h1 class="logo_text1 animated">DLUX</h1>
-					<p class="logo_text2 animated">Dance Studio</p>
-				</div>
-			</div>
-		</section>
-
-		<section class="second-slide">
-			<div class="first_images images">
-				<img src="img/img2.jpg" alt="img" class="img2 img animated">
-				<img src="img/img1.jpg" alt="img" class="img1 img animated">
-				<img src="img/img3.jpg" alt="img" class="img3 img animated">
-			</div>
-
-			<div class="second_images images">
-				<img src="img/img4.jpg" alt="img" class="img4 img animated">
-				<img src="img/img5.jpg" alt="img" class="img5 img animated">
-				<img src="img/img6.jpg" alt="img" class="img6 img animated">
-			</div>
-			<div class="third_images images">
-				<img src="img/img7.jpg" alt="img" class="img7 img animated">
-			</div>
-		</section>
+	<div class="images">
+		<div class="img1 img animated bounceIn"></div>
+		<div class="img2 img animated"></div>
+		<div class="img3 img animated"></div>
+		<div class="img4 img animated"></div>
+		<div class="img5 img animated"></div>
+		<div class="img6 img animated"></div>
+		<div class="img8 img animated"></div>
+		<div class="img7 img animated"></div>
 	</div>
 	<script src="js/main.js"></script>
 </body>
