--- a/index.html
+++ b/index.html
@@ -11,14 +11,31 @@
 </head>
 <body>
 	<div class="images">
-		<div class="img1 img animated bounceIn"></div>
-		<div class="img2 img animated"></div>
-		<div class="img3 img animated"></div>
-		<div class="img4 img animated"></div>
-		<div class="img5 img animated"></div>
-		<div class="img6 img animated"></div>
-		<div class="img8 img animated"></div>
-		<div class="img7 img animated"></div>
+		<img src="img/img1.jpg" alt="" class="img1 img animated">
+		<img src="img/img2.jpg" alt="" class="img2 img animated">
+		<img src="img/img3.jpg" alt="" class="img3 img animated">
+		<img src="img/img4.jpg" alt="" class="img4 img animated">
+		<img src="img/img5.jpg" alt="" class="img5 img animated">
+		<img src="img/img6.jpg" alt="" class="img6 img animated">
+		<img src="img/img8.jpg" alt="" class="img7 img animated">
+		<div class="img7 img animated">
+			<img src="img/img7.png" alt="" class="img8 img">
+			<div class="textBlock">
+				<h1 class="ourAddress animated">Наши Адреса:</h1>
+				<div class="address address1 animated">
+					<h2>Навои - 1</h2>
+					<h1>148 28 82</h1>
+				</div>
+				<div class="address address2 animated">
+					<h2>Мукимий, 142/1</h2>
+					<h1>150 27 72</h1>
+				</div>
+				<div class="address address3 animated">
+					<h2>Афросиаб, 10/2</h2>
+					<h1>200 00 62</h1>
+				</div>
+			</div>
+		</div>
 	</div>
 	<script src="js/main.js"></script>
 </body>
