--- a/index.html
+++ b/index.html
@@ -11,16 +11,66 @@
 </head>
 <body>
 	<div class="images">
-		<img src="img/img1.jpg" alt="" class="img1 img animated">
-		<img src="img/img2.jpg" alt="" class="img2 img animated">
-		<img src="img/img3.jpg" alt="" class="img3 img animated">
-		<img src="img/img4.jpg" alt="" class="img4 img animated">
-		<img src="img/img5.jpg" alt="" class="img5 img animated">
-		<img src="img/img6.jpg" alt="" class="img6 img animated">
-		<img src="img/img8.jpg" alt="" class="img7 img animated">
+		<div class="img1 img animated">
+			<div class="img1_top animated">
+				<img src="img/1.1.png">
+				<h1>Студия Танца</h1>
+			</div>
+			<div class="img1_bottom animated">
+				<h1 class="pink">Вам Обеспечены</h1>
+				<h1>
+					Новые незабываемые<br>
+					впечатления <br>
+					и Безграничная <br>
+					Энергия
+				</h1>
+			</div>
+		</div>
+	
+		<div class="img2 img animated">
+			<div class="img2_top animated">
+				<img src="img/1.1.png">
+				<h1>Акция</h1>
+			</div>
+
+			<div class="img2_bottom animated">
+				<h1 class="img2_text1">"Тает Лёд"</h1>
+				<h1 class="img2_text2">450 000</h1>
+			</div>
+		</div>
+		
+		<div class="img3 img animated">
+			<div class="img3_top animated">
+				<img src="img/1.1.png">
+				<h2>
+					Стартует <br>
+					Детская <br>
+					Акция
+				</h2>
+			</div>
+
+			<div class="img3_bottom animated">
+				<h1 class="img3_text1">Happy Kids</h1>
+				<h1 class="img3_text2">300 000</h1>
+			</div>
+		</div>
+		
+
+		<div class="img4 img animated"></div>
+		<div class="img5 img animated"></div>
+		<div class="img6 img animated"></div>
+		<div class="img8 img animated"></div>
 		<div class="img7 img animated">
-			<img src="img/img7.png" alt="" class="img8 img">
-			<div class="textBlock">
+			<div class="img7_top animated">
+				<img src="img/1.1.png">
+				<h2>
+					Ждём вас <br>
+					В нашей студии танцев <br>
+					DLUX!
+	
+				</h2>
+			</div>
+			<div class="img7_bottom">
 				<h1 class="ourAddress animated">Наши Адреса:</h1>
 				<div class="address address1 animated">
 					<h2>Навои - 1</h2>
