--- a/index.html
+++ b/index.html
@@ -59,30 +59,31 @@
 		<div class="img4 img animated"></div>
 		<div class="img5 img animated"></div>
 		<div class="img6 img animated"></div>
-		<div class="img8 img animated"></div>
 		<div class="img7 img animated">
-			<div class="img7_top animated">
-				<img src="img/1.1.png">
-				<h2>
-					Ждём вас <br>
-					В нашей студии танцев <br>
-					DLUX!
-	
-				</h2>
-			</div>
-			<div class="img7_bottom">
-				<h1 class="ourAddress animated">Наши Адреса:</h1>
-				<div class="address address1 animated">
-					<h2>Навои - 1</h2>
-					<h1>148 28 82</h1>
+			<div class="img7_wrap">
+				<div class="img7_top animated">
+					<img src="img/1.1.png">
+					<h2>
+						Ждём вас <br>
+						В нашей студии танцев <br>
+						DLUX!
+		
+					</h2>
 				</div>
-				<div class="address address2 animated">
-					<h2>Мукимий, 142/1</h2>
-					<h1>150 27 72</h1>
-				</div>
-				<div class="address address3 animated">
-					<h2>Афросиаб, 10/2</h2>
-					<h1>200 00 62</h1>
+				<div class="img7_bottom">
+					<h1 class="ourAddress animated">Наши Адреса:</h1>
+					<div class="address address1 animated">
+						<h2>Навои - 1</h2>
+						<h1>148 28 82</h1>
+					</div>
+					<div class="address address2 animated">
+						<h2>Мукимий, 142/1</h2>
+						<h1>150 27 72</h1>
+					</div>
+					<div class="address address3 animated">
+						<h2>Афросиаб, 10/2</h2>
+						<h1>200 00 62</h1>
+					</div>
 				</div>
 			</div>
 		</div>
