--- a/index.html
+++ b/index.html
@@ -1,93 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
-	<title>DLUX</title>
-	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
-	<link rel="stylesheet" type="text/css" href="styles/animate.css">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<title>JavaScript Projects</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<div class="images">
-		<div class="img1 img animated">
-			<div class="img1_top animated">
-				<img src="img/1.1.png">
-				<h1>Студия Танца</h1>
+	<section class="projects_cards">
+			<div class="projects_card">
+				<figure>
+					<div class="project_card_img project_card_img-1"></div>
+					<figcaption>
+						<h1 class="projects_card_name">Carusel</h1>
+						<a class="projects_card_button" href="carusel/index.html" target="_blank">Learn More</a>
+					</figcaption>
+				</figure>		
 			</div>
-			<div class="img1_bottom animated">
-				<h1 class="pink">Вам Обеспечены</h1>
-				<h1>
-					Новые незабываемые<br>
-					впечатления <br>
-					и Безграничная <br>
-					Энергия
-				</h1>
+			<div class="projects_card">
+				<figure>
+					<div class="project_card_img project_card_img-2"></div>
+					<figcaption>
+						<h1 class="projects_card_name">Postcards</h1>
+						<a class="projects_card_button" href="PodcardsInSpace/index.html" target="_blank">Learn More</a>
+					</figcaption>
+				</figure>		
 			</div>
-		</div>
-	
-		<div class="img2 img animated">
-			<div class="img2_top animated">
-				<img src="img/1.1.png">
-				<h1>Акция</h1>
+			<div class="projects_card">
+				<figure>
+					<div class="project_card_img project_card_img-3"></div>
+					<figcaption>
+						<h1 class="projects_card_name">Spiral</h1>
+						<a class="projects_card_button" href="spiral/index.html" target="_blank">Learn More</a>
+					</figcaption>
+				</figure>		
 			</div>
-
-			<div class="img2_bottom animated">
-				<h1 class="img2_text1">"Тает Лёд"</h1>
-				<h1 class="img2_text2">450 000</h1>
+			<div class="projects_card">
+				<figure>
+					<div class="project_card_img project_card_img-4"></div>
+					<figcaption>
+						<h1 class="projects_card_name">Fractals</h1>
+						<a class="projects_card_button" href="fractals/index.html" target="_blank">Learn More</a>
+					</figcaption>
+				</figure>		
 			</div>
-		</div>
-		
-		<div class="img3 img animated">
-			<div class="img3_top animated">
-				<img src="img/1.1.png">
-				<h2>
-					Стартует <br>
-					Детская <br>
-					Акция
-				</h2>
-			</div>
-
-			<div class="img3_bottom animated">
-				<h1 class="img3_text1">"Happy Kids"</h1>
-				<h1 class="img3_text2">300 000</h1>
-			</div>
-		</div>
-		
-
-		<div class="img4 img animated"></div>
-		<div class="img5 img animated"></div>
-		<div class="img6 img animated"></div>
-		<div class="img7 img animated">
-			<div class="img7_wrap">
-				<div class="img7_top animated">
-					<img src="img/1.1.png">
-					<h2>
-						Ждём вас <br>
-						В нашей студии танцев <br>
-						DLUX!
-		
-					</h2>
-				</div>
-				<div class="img7_bottom">
-					<h1 class="ourAddress animated">Наши Адреса:</h1>
-					<div class="address address1 animated">
-						<h2>Навои - 1</h2>
-						<h1>148 28 82</h1>
-					</div>
-					<div class="address address2 animated">
-						<h2>Мукимий, 142/1</h2>
-						<h1>150 27 72</h1>
-					</div>
-					<div class="address address3 animated">
-						<h2>Афросиаб, 10/2</h2>
-						<h1>200 00 62</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src="js/main.js"></script>
+	</section>
 </body>
 </html>
